[gd_scene load_steps=6 format=2]

[ext_resource path="res://script/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Ilustracao_Sem_Titulo5.jpg" type="Texture" id=2]
[ext_resource path="res://audio/soundEffect/buttonclicked_menu.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=2]
resource_name = "creditos"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.843137 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/back/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "openmenu"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="main_menu" type="Control"]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
position = Vector2( -442.232, 41.5774 )
z_index = 125

[node name="background" type="Sprite" parent="CanvasLayer"]
position = Vector2( 505.45, 305.169 )
scale = Vector2( 1.59582, 1.43456 )
texture = ExtResource( 2 )

[node name="play" type="Button" parent="CanvasLayer"]
margin_left = 795.044
margin_top = 270.622
margin_right = 998.044
margin_bottom = 310.622

[node name="Label" type="Label" parent="CanvasLayer/play"]
margin_left = 73.0
margin_top = 10.0
margin_right = 107.0
margin_bottom = 24.0
rect_scale = Vector2( 1.88, 1.68 )
text = "Jogar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditos" type="Button" parent="CanvasLayer"]
margin_left = 795.316
margin_top = 350.0
margin_right = 996.316
margin_bottom = 389.0

[node name="Label" type="Label" parent="CanvasLayer/creditos"]
margin_left = 47.0
margin_top = 8.0
margin_right = 106.0
margin_bottom = 39.0
rect_scale = Vector2( 1.6, 1.92 )
text = "creditos
"
autowrap = true

[node name="quit" type="Button" parent="CanvasLayer"]
margin_left = 797.234
margin_top = 415.604
margin_right = 1000.23
margin_bottom = 455.604

[node name="Label" type="Label" parent="CanvasLayer/quit"]
margin_left = 74.2336
margin_top = 9.69559
margin_right = 100.234
margin_bottom = 23.6956
rect_scale = Vector2( 2.28, 1.68 )
text = "sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effect_hoverfocus" type="AudioStreamPlayer" parent="CanvasLayer"]

[node name="effect_clicked" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -54.0
margin_right = 1131.0
margin_bottom = 687.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.798
margin_top = -149.757
margin_right = -47.7981
margin_bottom = -50.7571
rect_scale = Vector2( 2.52, 2.52 )
text = "Ariane Cavalcanti Palermo
Gabriel Abra√£o Cheida Bileski
Gilmar da silva andrade
Henrrique da silva Souza
Kayo de carvalho silva
Matheus da silva correia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="CanvasLayer"]
margin_left = 37.0632
margin_top = 518.194
margin_right = 240.063
margin_bottom = 558.194

[node name="Label" type="Label" parent="CanvasLayer/back"]
margin_left = 55.6335
margin_top = 10.3212
margin_right = 96.6335
margin_bottom = 24.3212
rect_scale = Vector2( 2.36, 2 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/creditos = SubResource( 2 )
anims/openmenu = SubResource( 1 )
[connection signal="focus_entered" from="CanvasLayer/play" to="." method="_on_play_focus_entered"]
[connection signal="pressed" from="CanvasLayer/play" to="." method="_on_play_pressed"]
[connection signal="focus_entered" from="CanvasLayer/creditos" to="." method="_on_creditos_focus_entered"]
[connection signal="pressed" from="CanvasLayer/creditos" to="." method="_on_creditos_pressed"]
[connection signal="focus_entered" from="CanvasLayer/quit" to="." method="_on_quit_focus_entered"]
[connection signal="pressed" from="CanvasLayer/quit" to="." method="_on_quit_pressed"]
[connection signal="focus_entered" from="CanvasLayer/back" to="." method="_on_back_focus_entered"]
[connection signal="pressed" from="CanvasLayer/back" to="." method="_on_back_pressed"]
